infra/ingress.yml
---

kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: referentie-implementatie-test
  namespace: gemma
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ref.tst.vng.cloud
    http:
      paths:
      - path: "/zrc/"
        backend:
          serviceName: zrc
          servicePort: 8000
